# pyimports

./: .gitignore  Cargo.toml  README.md  Taskfile.yml
.github/workflows/: ci.yml
benches/: grimp_compare.rs
data/: small_graph.json
example/: d.py  e.py  z.py
example/child/: c_z.py
example/child3/: __init__.py
src/: ast_visit.rs  ast_visit_test.py  errors.rs  grimp_compare.rs  import_discovery.rs  indexing.rs  lib.rs  main.rs  package_discovery.rs  pypath.rs  somefeature.rs  testutils.rs  utils.rs
src/contracts/: forbidden_external.rs  forbidden_internal.rs  independent.rs  layers.rs  mod.rs  utils.rs
src/import_discovery/: ast_visit.rs  mod.rs  one_file.rs
src/import_graph/: ast_visit.rs  builder.rs  cache.rs  errors.rs  graph.rs  import_discovery.rs  indexing.rs  mod.rs  package_discovery.rs
src/import_info/: ast_visit.rs  mod.rs  one_file.rs
src/imports_info/: grimp_compare.rs  mod.rs  one_file.rs
src/imports_info/parse/: mod.rs
src/imports_info/queries/: external_imports.rs  internal_imports.rs  mod.rs
src/imports_info/queries/internal_imports/: layers.rs  mod.rs
src/package_discovery/: filesystem.rs  mod.rs  queries.rs
src/package_info/: filesystem.rs  grimp_compare.rs  mod.rs  queries.rs
src/package_queries/: mod.rs
src/parse/: ast_visit.rs  mod.rs
testpackages/somesillypackage/: __init__.py  a.py  b.py  c.py  d.py  z.py
testpackages/somesillypackage/child1/: __init__.py  d.py  z.py
tests/: test_django.rs  test_import_graph.rs  test_requests.rs
