[package]
name = "pyimports"
description = "Parse and analyze the imports within a python package"
license = "MIT"
version = "0.1.0"
edition = "2021"
exclude = [
    ".github/*",
    "Taskfile.yml",
    "tests/*",
    "testpackages/*",
    "!tests/test_import_graph.rs",
    "!testpackages/somesillypackage",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
rustpython-parser = "0.4.0"
thiserror = "2.0.7"

[dev-dependencies]
maplit = "1.0.2"
tempdir = "0.3.7"
