[package]
name = "pyimports"
description = "Parse and analyze the imports within a python package"
repository = "https://github.com/Peter554/pyimports"
readme = "README.md"
license = "MIT"
version = "0.2.0"
edition = "2021"
exclude = [
    ".github/*",
    "Taskfile.yml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
maplit = "1.0.2"
rayon = "1.10.0"
rustpython-parser = "0.4.0"
slotmap = "1.0.7"
thiserror = "2.0.7"
tempdir = "0.3.7"
pathfinding = "4.12.0"
regex = "1.11.1"
lazy_static = "1.5.0"

[dev-dependencies]
parameterized = "2.0.0"
pretty_assertions = "1.4.1"
